# energy-cost

./: .env.example  .gitignore  .pre-commit-config.yaml  AI.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  temp_2025.xlsb  temp_2026.xlsb
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: notebooks.yml  pre-commit.yml  publish.yml  test.yml
data/be/: parse_distributors.py
data/be/distributors/: fluvius_antwerpen.yml  fluvius_halle_vilvoorde.yml  fluvius_imewo.yml  fluvius_limburg.yml  fluvius_zenne_dijle.yml
data/indexes/: foo.yml
data/tariffs/: complex.yml  dynamic.yml  injection_tariff.yml  scheduled.yml  scheduled_tariff.yml
data/tariffs/EBEM/: Groen_Dynamic.yml
examples/capacity_rule/: moving_window.yml  simple.yml
examples/contracts/: dynamic.yml  gas.yml  history.yml  history_with_gap.yml  injection.yml  inline.yml  inline_full.yml  simple.yml
examples/indexes/: foo.csv
examples/tariffs/: banded_tiered.yml  capacity.yml  cost_groups.yml  cost_types.yml  dynamic.yml  fixed.yml  injection.yml  metered.yml  periodic.yml  periodic_tiered.yml  scheduled.yml  simple.yml  tiered.yml
examples/taxes/: foo.yml
notebooks/: contract.ipynb  dynamic_tariff_poc.py  formula.ipynb  helpers.py  index.ipynb  tariff.ipynb  tariff.py  tax.ipynb
src/energy_cost/: __init__.py  billing.py  capacity.py  capacity_cost.py  contract.py  enums.py  fractional_periods.py  meter.py  periodic_cost.py  price_component.py  price_formula.py  registry.py  resolution.py  scheduled_formula.py  tariff.py  tariff_version.py  tax.py  types.py  versioning.py
src/energy_cost/core/: engine.py  (+1 more)
test/: conftest.py  test_dynamic_electricity.py
tests/: conftest.py  test_billing.py  test_capacity.py  test_capacity_cost.py  test_contract.py  test_fractional_periods.py  test_nan_handling.py  test_price_formula.py  test_resolution.py  test_scheduled_formula.py  test_synergrid_preprocess.py  test_tariff.py  test_tariff_version.py  test_tax.py  test_types.py  test_versioning.py
tests/data/: test_belpex_index.py
tests/formula/: test_formula.py  test_index.py  test_metertype.py  test_minimum.py  test_periodic.py  test_scheduled.py  test_tiered.py
tests/index/: test_belpex_index.py  test_cached_entsoe_day_ahead_index.py  test_cached_index.py  test_dataframe_index.py  test_entsoe_day_ahead_index.py  test_index.py  test_load_profile_index.py  test_synegrid_load_profile_index.py
tests/integration/: test_contracts.py  test_data.py  test_serialisation.py  test_tarifs.py
(+96 files in other folders)
