[project]
name = "energy-cost"
authors = [
    { name="EnergyID", email = "info@energieid.be" },
    { name="Jorg" }
]
version = "0.1.0"
description = "Energy cost calculation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "pandas>=2.2.0",
    "entsoe-py>=0.7.10",
    "isodate>=0.7.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "ty>=0.0.12",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.0",
    "openpyxl>=3.1.0",
]
[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"energy_cost.data" = ["**/*.yml"]
[tool.poe.tasks]
lint = "ruff check --fix"
format = "ruff format"
check = "ty check"
test = "pytest --cov=energy_cost --cov-report=term-missing"
[tool.poe.tasks.notebooks]
cmd = "jupyter lab notebooks"
envfile = ".env"
[tool.ruff]
line-length = 120
[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
ignore = [
    "E501", #Line too long
]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.py" = ["B018"]
